# nexus_memory

./: .env.example  .gitignore  CONTRACT-v2-multilayer.md  CONTRACT.md  LICENSE  README.md  chat.py  docs.html  index.html  pyproject.toml  requirements.txt
chatapp/: __init__.py  app.py  commands.py  config.py  llm.py  memory.py  selftest.py  tokens.py  trace.py  tui.py
css/: docs.css  style.css
docs/: architecture-io.md  contract-v3.md  final_validation.md  index.md  ms1_results.md  ms2_results.md  ms3_results.md  ms4_results.md  ms5_results.md  ms7_multilayer.md  ms8_diary.md
examples/: basic_usage.py  diary_outbox.py  token_accounting.py
js/: docs.js  loader.js  md.js
nexus_memory_pkg/: README.md  pyproject.toml  schema.sql
nexus_memory_pkg/src/nexus_memory/: __init__.py
nexus_memory_pkg/src/nexus_memory/core/: config.py  consolidation.py  context.py  db.py  embeddings.py  models.py  orchestrator.py  privacy.py  provenance.py  reindex.py  scoring.py  transparency.py  xml_format.py
nexus_memory_pkg/src/nexus_memory/core/auxbus/: __init__.py  bus.py
nexus_memory_pkg/src/nexus_memory/layers/diary/: __init__.py  config.py  consolidator.py  layer.py  prompts.py  provider.py  scheduler.py  store.py
nexus_memory_pkg/src/nexus_memory/layers/episodic/: episodic.py  summarization.py
nexus_memory_pkg/src/nexus_memory/layers/procedural/: handler.py  procedural.py  prompts.py
nexus_memory_pkg/src/nexus_memory/layers/semantic/: extraction.py  reader.py  writer.py
nexus_memory_pkg/src/nexus_memory/layers/working/: working.py
sections/: architecture.html  background.html  cta.html  faq.html  features.html  footer.html  hero.html  install.html  io.html  nav.html  showcase.html  tech.html
src/: requirements.txt
(+97 files in other folders)
