[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-memory"
version = "0.3.3"
description = "Nexus Memory Module — a local-first, SQLite-vec backed cognitive memory library for LLM agents (working / episodic / semantic / procedural + optional diary)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sakushi-Dev", email = "chris_reiss@outlook.de" }]
dependencies = [
    "sqlite-vec>=0.1.9",
    "pydantic>=2.12",
    "numpy>=2.0",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus_memory = ["py.typed", "schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
