[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-memory"
version = "0.1.0"
description = "Nexus Memory Module — a local-first, SQLite-vec backed agent memory library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nexus Memory" }]
dependencies = [
    "sqlite-vec>=0.1.9",
    "pydantic>=2.12",
    "numpy>=2.0",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus_memory = ["py.typed", "schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
